# fritzWOL

./: LICENSE  README.md  fritzwol.py  pyproject.toml
.github/workflows/: release.yml
