[project]
name = "fritzwol"
version = "0.1.1"
description = "List FritzBox network devices and wake one with Wake-on-LAN."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Jesper Schlegel", email = "jesperhschlegel@gmail.com" },
]
dependencies = [
    "fritzconnection>=1.13",
    "pydantic-settings>=2.11.0",
    "rich>=15.0.0",
]

[project.urls]
Homepage = "https://github.com/jesperschlegel/fritzWOL"
Repository = "https://github.com/jesperschlegel/fritzWOL.git"
Issues = "https://github.com/jesperschlegel/fritzWOL/issues"

[project.scripts]
fritzwol = "fritzwol:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["fritzwol.py"]
